BTHome optimization
Iterator<JsonNode> componentsIt =
getJSONIterator("/rpc/Shelly.GetComponents?keys=" + componentsKeys,
"components");